""" Builds optimus.
"""

load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("@rules_cc//cc:defs.bzl", "cc_library")
load("//repositories:cc_defs.bzl", "COPTS")

bool_flag(
    name = "debug",
    build_setting_default = False,
)

config_setting(
    name = "debug_on",
    flag_values = {":debug": "True"},
)

cc_library(
    name = "common",
    srcs = [
        "check.cc",
    ],
    hdrs = [
        "check.h",
        "debug.h",
    ],
    defines = select({
        ":debug_on": ["OPTIMUS_DEBUG"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)
