""" Builds stb.
"""

load("@rules_cc//cc:defs.bzl", "cc_library")

genrule(
    name = "stb_image_c",
    outs = ["stb_image.c"],
    cmd = """cat > $@ << EOL
#define STB_IMAGE_IMPLEMENTATION
#include "stb_image.h"  // NOLINT
EOL
""",
)

cc_library(
    name = "stb_image",
    srcs = [":stb_image_c"],
    hdrs = ["stb_image.h"],
    visibility = ["//visibility:public"],
)
